# systemictau

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  USER_GUIDE.md  basic_tutorial.ipynb  build_mac.sh  docker-compose.yml  example_logistic.py  pyproject.toml
.agents/: AGENTS.md
.github/workflows/: python-app.yml
deployment/k8s/: api-deployment.yaml  redis-deployment.yaml  worker-deployment.yaml
docs/: conf.py  index.rst  theory.rst  tutorial.rst  v6_autonomous_discovery_platform.md  v7_vision_2030.md  v8_desktop_gui_application.md
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  theory.doctree  tutorial.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  theory.html  tutorial.html
docs/_build/html/_sources/: api.rst.txt
notebooks/: 03_V3_Stable.ipynb
scripts/: run_benchmarks.py
src/systemictau/: __init__.py  cli.py  climate.py  config.py  core.py  gis.py  layers.py  visualization.py
src/systemictau.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/systemictau/agents/: epistemic_engine.py  observer.py  proactive.py
src/systemictau/desktop/: app.py
src/systemictau/graph/: db.py  schema.py
src/systemictau/platform/: ai.py
src/systemictau/platform/api/: main.py
src/systemictau/platform/dashboard/: app.py
src/systemictau/streaming/: app.py
tests/: test_core.py  test_gis.py  test_v21.py  test_v25.py  test_v30.py  test_validation.py
