[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "systemictau"
version = "2.0.1"
description = "Systemic Tau and Discrete Extramental Clock (RECD) implementation"
authors = [
    {name = "Johel Padilla-Villanueva", email = "joel.padilla2@upr.edu"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
visualization = ["matplotlib>=3.7", "seaborn"]
full = ["matplotlib>=3.7", "seaborn", "pandas", "xarray", "streamlit", "typer"]

[project.scripts]
systemictau = "systemictau.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
